@@ -168,7 +168,7 @@ int e_readCheck(const s_fidoconfig *config, s_area *echo, s_link *link);
 // '\x0003' no access export
 // '\x0004' not linked
 
-int e_writeCheck(const s_fidoconfig *config, s_area *echo, s_addr *aka);
+int e_writeCheck(const s_fidoconfig *config, s_area *echo, s_link *link);
 // '\x0000' access o'k
 // '\x0001' no access group
 // '\x0002' no access level
