@@ -497,6 +497,20 @@ s_link *getLinkFromAddr(s_fidoconfig config, s_addr aka)
    return NULL;
 }
 
+s_link *getLinkForArea(s_fidoconfig config, char *addr, s_area *area) {
+	s_addr aka;
+	UINT i;
+	
+	string2addr(addr, &aka);
+	for (i = 0; i< config.linkCount; i++) {
+		if (addrComp(aka, config.links[i].hisAka)==0 &&
+			addrComp(*area->useAka, *config.links[i].ourAka)==0)
+			return &(config.links[i]);
+	}
+	
+	return NULL;
+}
+
 s_addr *getAddr(s_fidoconfig config, char *addr) {
    s_addr aka;
    UINT i;
