@@ -1,68 +1,0 @@
-#Settings for Linux 
-
-# include Husky-Makefile-Config
-include ../huskymak.cfg
-
-# program settings
-CC = gcc
-AR = ar
-AR_R = r
-RM = rm
-
-ifeq ($(DEBUG), 1)
-  COPT = -c -fPIC -Wall -ggdb -DUNIX -I$(INCDIR) -I../smapi
-else
-  COPT = -c -fPIC -Wall -s -O3 -DUNIX -I$(INCDIR) -I../smapi
-endif
-
-LOPT = -L. -L$(LIBDIR)
-
-# filename settings
-O = .o
-A = .a
-EXE =
-TPU = .ppu
-FIDOCONFIG = fidoconfig
-FCONF2AQUAED = fconf2aquaed
-FCONF2GOLDED = fconf2golded
-FCONF2MSGED  = fconf2msged
-FCONF2FIDOGATE = fconf2fidogate
-FCONF2SQUISH = fconf2squish
-FECFG2FCONF = fecfg2fconf
-LIBFIDOCONFIG = libfidoconfig
-LINKSMAPI = -lsmapilnx
-LINKFIDOCONFIG = -l$(FIDOCONFIG)
-
-default: all
-
-include makefile.common
-
-all: commonlibs libfidoconfig.so.$(VER) commonprogs
-
-clean: commonclean
-	-$(RM) so_locations
-
-distclean: commondistclean
-	-$(RM) libfidoconfig.so.$(VER)
-
-libfidoconfig.so.$(VER): line$(O) common$(O) fidoconfig$(O) adcase$(O) dirlayer$(O)
-	$(CC) -shared -Wl,-soname,libfidoconfig.so.$(VERH) -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) adcase$(O) dirlayer$(O) $(LOPT) 
-
-%.o: %.c
-	$(CC) $(COPT) $*.c
-
-install: commonlibs commonprogs
-	install $(ILOPT) libfidoconfig.so.$(VER) $(LIBDIR)
-	ln -sf $(LIBDIR)/libfidoconfig.so.$(VER) $(LIBDIR)/libfidoconfig.so.0
-	ln -sf $(LIBDIR)/libfidoconfig.so.0 $(LIBDIR)/libfidoconfig.so
-	install $(IBOPT) fconf2msged fconf2golded fconf2aquaed fconf2fidogate fconf2squish $(BINDIR)
-	install linkedto $(BINDIR)
-	install $(IBOPT) tparser      $(BINDIR)
-	install $(IBOPT) dumpfcfg     $(BINDIR)
-	install $(IIOPT) fidoconfig.h $(INCDIR)
-	install $(IIOPT) typesize.h   $(INCDIR)
-	install $(IIOPT) common.h     $(INCDIR)
-	install $(IIOPT) dirlayer.h   $(INCDIR)
-	install $(IIOPT) adcase.h     $(INCDIR)
-	install $(IIOPT) fidoconf.pas $(INCDIR)
-
