@@ -773,7 +773,8 @@ int parseArea(const s_fidoconfig *config, char *token, s_area *area)
       else if (isdigit(tok[0]) && (patmat(tok, "*:*/*") || patmat(tok, "*:*/*.*"))) {
          area->downlinks = realloc(area->downlinks, sizeof(s_arealink*)*(area->downlinkCount+1));
 	 area->downlinks[area->downlinkCount] = (s_arealink*)calloc(1, sizeof(s_arealink));
-         area->downlinks[area->downlinkCount]->link = getLink(*config, tok);
+//         area->downlinks[area->downlinkCount]->link = getLink(*config, tok);
+         area->downlinks[area->downlinkCount]->link = getLinkForArea(*config,tok,area);
          if (area->downlinks[area->downlinkCount]->link == NULL) {
             printf("Line %d: Link for this area is not found!\n", actualLineNr);
             rc += 1;
@@ -802,8 +803,8 @@ int parseArea(const s_fidoconfig *config, char *token, s_area *area)
 			 arealink->mandatory = link->mandatory;
 		 }
 		 if (area->mandatory) arealink->mandatory = 1;
-		 if (e_readCheck(config, area, link))	arealink->export = 0;
-		 if (e_writeCheck(config, area, &link->hisAka)) arealink->import = 0;
+		 if (e_readCheck(config, area, link)) arealink->export = 0;
+		 if (e_writeCheck(config, area, link)) arealink->import = 0;
 		 
 	 tok = strtok(NULL, " \t");
 	 while (tok) {
